# SpectralClean

./: .gitignore  README.md  pyproject.toml
examples/: clean_coco_dataset.py
spectralclean/: __init__.py  cli.py  coco_utils.py  duplicate_detector.py  feature_extractor.py  noise_separator.py  pipeline.py  smart_masker.py  spectral_scorer.py  visualization.py
tests/: test_coco_utils.py  test_duplicate_detector.py  test_noise_separator.py  test_spectral_scorer.py
